fixed hero image alignment issue

--- a/dest/main.css
+++ b/dest/main.css
@@ -34,6 +34,7 @@ a:hover {
   width: 90%;
   margin: auto;
   min-height: 100vh;
+  text-align: center;
 }
 
 #title {
