--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ a:hover {
   width: 90%;
   margin: auto;
   min-height: 100vh;
+  text-align: center;
 }
 
 #title {
